Still trying to fix the message decoding bug